osbuild: update chattr stage with latest upstream
Hopefully the PR will merge soon:
https://github.com/osbuild/osbuild/pull/1535

--- a/src/coreos.osbuild.x86_64.mpp.yaml
+++ b/src/coreos.osbuild.x86_64.mpp.yaml
@@ -317,8 +317,9 @@ pipelines:
             target: /boot/efi
       - type: org.osbuild.chattr
         options:
-          immutable: true
-          path: mount://root/
+          items:
+            mount://root/:
+              immutable: true
         devices:
           disk:
             type: org.osbuild.loopback
@@ -497,8 +498,9 @@ pipelines:
             target: /boot/efi
       - type: org.osbuild.chattr
         options:
-          immutable: true
-          path: mount://root/
+          items:
+            mount://root/:
+              immutable: true
         devices:
           disk:
             type: org.osbuild.loopback
