--- a/src/coreos.osbuild.aarch64.mpp.yaml
+++ b/src/coreos.osbuild.aarch64.mpp.yaml
@@ -313,8 +313,9 @@ pipelines:
             target: /boot/efi
       - type: org.osbuild.chattr
         options:
-          immutable: true
-          path: mount://root/
+          items:
+            mount://root/:
+              immutable: true
         devices:
           disk:
             type: org.osbuild.loopback
@@ -493,8 +494,9 @@ pipelines:
             target: /boot/efi
       - type: org.osbuild.chattr
         options:
-          immutable: true
-          path: mount://root/
+          items:
+            mount://root/:
+              immutable: true
         devices:
           disk:
             type: org.osbuild.loopback
