--- a/src/coreos.osbuild.ppc64le.mpp.yaml
+++ b/src/coreos.osbuild.ppc64le.mpp.yaml
@@ -287,8 +287,9 @@ pipelines:
             target: /boot
       - type: org.osbuild.chattr
         options:
-          immutable: true
-          path: mount://root/
+          items:
+            mount://root/:
+              immutable: true
         devices:
           disk:
             type: org.osbuild.loopback
@@ -439,8 +440,9 @@ pipelines:
             target: /boot
       - type: org.osbuild.chattr
         options:
-          immutable: true
-          path: mount://root/
+          items:
+            mount://root/:
+              immutable: true
         devices:
           disk:
             type: org.osbuild.loopback
