osbuild: remove immutable bit early on ppc64le
For some reason only on ppc64le if we don't remove the immutable
bit from the deployment directory in the tree then the directory
can't be cleaned up.. I don't know why this is but we can mitigate
it like this for now.

Here's the error:

```
_  Duration: 270s
oci-archive:    6fec61b135bc85afc80ca65b9ee35af768ea1b640e146c6a9751d15ffe1bc955
tree:           44c971a4b76f51bf98437efbd4544646f8c13bfe558ca32d01a078652903d3a1
raw-image:      55480762283398676857b5eba07c7adc73c39645974532c495de73e950df53b3
raw-4k-image:   e80f6cace11c6fb595d12956f26ce18bd4a941a3ddfc32b48d18718760d2beeb
raw-metal-image:        1c18974c077cda3b48e5552fdb7200df7eb51e71912dfa12d18bdde7d985282e
raw-metal4k-image:      09fe8743dda2ff123e0627a6749db02bf9d4ece21b8c09e97667aacd870377ba
raw-qemu-image: c3f7c739193bc190fc3732ef2889a571d1f0abecbc7f99929420e1d14cb4c121
metal:          5146e10dda27916143924f1e9d6e8272bdb64f62525bd4041c72607b722c248b
metal4k:        2aab5dbbd249e24b06975bec98b899d91957fb44f4ce7f5a41b787977481d42f
qemu:           60c6206cc0e19cbe938081df785dae3e5ce50fee1cc2987126335f303ef748df
Traceback (most recent call last):
  File "/usr/lib64/python3.12/shutil.py", line 703, in _rmtree_safe_fd
    os.unlink(entry.name, dir_fd=topfd)
PermissionError: [Errno 1] Operation not permitted: 'bin'
```

--- a/src/coreos.osbuild.ppc64le.mpp.yaml
+++ b/src/coreos.osbuild.ppc64le.mpp.yaml
@@ -150,6 +150,21 @@ pipelines:
                   - ref: $ref
                     remote:
                       url: $repourl
+      # Drop the immutable bit here (we add it back later) because it
+      # causes failures when cleaning up tmp dirs.
+      - type: org.osbuild.chattr
+        options:
+          items:
+            tree:///:
+              immutable: false
+        mounts:
+          - name: ostree.deployment
+            type: org.osbuild.ostree.deployment
+            options:
+              deployment:
+                ref: ostree/1/1/0
+                osname:
+                  mpp-format-string: '{osname}'
       - type: org.osbuild.ostree.aleph
         options:
           coreos_compat: true
