osbuild: install bootloader on ppc64le 4k disk
This isn't needed on x86_64 4k disk since it's UEFI only,
but it is needed on ppc64le.

--- a/src/coreos.osbuild.ppc64le.mpp.yaml
+++ b/src/coreos.osbuild.ppc64le.mpp.yaml
@@ -427,6 +427,12 @@ pipelines:
             target: /boot
       - type: org.osbuild.bootupd
         options:
+          # ppc 4k disk needs bootloader installed
+          bios:
+            device: disk
+            # ppc install to the prep partition and not the root of the disk
+            partition:
+              mpp-format-int: '{image4k.layout[''PowerPC-PReP-boot''].partnum}'
           static-configs: true
           deployment:
             ref: ostree/1/1/0
