--- a/src/coreos.osbuild.ppc64le.mpp.yaml
+++ b/src/coreos.osbuild.ppc64le.mpp.yaml
@@ -168,22 +168,16 @@ pipelines:
             type: org.osbuild.ostree.deployment
             options:
               deployment:
-                ref: ostree/1/1/0
-                osname:
-                  mpp-format-string: '{osname}'
+                default: true
       - type: org.osbuild.ostree.aleph
         options:
           coreos_compat: true
           deployment:
-            ref: ostree/1/1/0
-            osname:
-              mpp-format-string: '{osname}'
+            default: true
       - type: org.osbuild.ostree.selinux
         options:
           deployment:
-            ref: ostree/1/1/0
-            osname:
-              mpp-format-string: '{osname}'
+            default: true
       # Copy in the platforms.json that was baked into the OSTree into /boot
       # so tools like coreos-installer can use the information.
       - type: org.osbuild.copy
@@ -196,9 +190,7 @@ pipelines:
             type: org.osbuild.ostree.deployment
             options:
               deployment:
-                ref: ostree/1/1/0
-                osname:
-                  mpp-format-string: '{osname}'
+                default: true
   - name: raw-image
     stages:
       - type: org.osbuild.truncate
@@ -299,9 +291,7 @@ pipelines:
               mpp-format-int: '{image.layout[''PowerPC-PReP-boot''].partnum}'
           static-configs: true
           deployment:
-            ref: ostree/1/1/0
-            osname:
-              mpp-format-string: '{osname}'
+            default: true
         devices:
           disk:
             type: org.osbuild.loopback
@@ -344,9 +334,7 @@ pipelines:
             options:
               source: mount
               deployment:
-                ref: ostree/1/1/0
-                osname:
-                  mpp-format-string: '{osname}'
+                default: true
   - name: raw-4k-image
     stages:
       - type: org.osbuild.truncate
@@ -456,9 +444,7 @@ pipelines:
               mpp-format-int: '{image4k.layout[''PowerPC-PReP-boot''].partnum}'
           static-configs: true
           deployment:
-            ref: ostree/1/1/0
-            osname:
-              mpp-format-string: '{osname}'
+            default: true
         devices:
           disk:
             type: org.osbuild.loopback
@@ -505,9 +491,7 @@ pipelines:
             options:
               source: mount
               deployment:
-                ref: ostree/1/1/0
-                osname:
-                  mpp-format-string: '{osname}'
+                default: true
   - name: raw-metal-image
     stages:
       - type: org.osbuild.copy
