--- a/src/coreos.osbuild.x86_64.mpp.yaml
+++ b/src/coreos.osbuild.x86_64.mpp.yaml
@@ -167,15 +167,11 @@ pipelines:
         options:
           coreos_compat: true
           deployment:
-            ref: ostree/1/1/0
-            osname:
-              mpp-format-string: '{osname}'
+            default: true
       - type: org.osbuild.ostree.selinux
         options:
           deployment:
-            ref: ostree/1/1/0
-            osname:
-              mpp-format-string: '{osname}'
+            default: true
       # Copy in the platforms.json that was baked into the OSTree into /boot
       # so tools like coreos-installer can use the information.
       - type: org.osbuild.copy
@@ -188,9 +184,7 @@ pipelines:
             type: org.osbuild.ostree.deployment
             options:
               deployment:
-                ref: ostree/1/1/0
-                osname:
-                  mpp-format-string: '{osname}'
+                default: true
   - name: raw-image
     stages:
       - type: org.osbuild.truncate
@@ -308,9 +302,7 @@ pipelines:
             device: disk
           static-configs: true
           deployment:
-            ref: ostree/1/1/0
-            osname:
-              mpp-format-string: '{osname}'
+            default: true
         devices:
           disk:
             type: org.osbuild.loopback
@@ -359,9 +351,7 @@ pipelines:
             options:
               source: mount
               deployment:
-                ref: ostree/1/1/0
-                osname:
-                  mpp-format-string: '{osname}'
+                default: true
   - name: raw-4k-image
     stages:
       - type: org.osbuild.truncate
@@ -487,9 +477,7 @@ pipelines:
         options:
           static-configs: true
           deployment:
-            ref: ostree/1/1/0
-            osname:
-              mpp-format-string: '{osname}'
+            default: true
         devices:
           disk:
             type: org.osbuild.loopback
@@ -542,9 +530,7 @@ pipelines:
             options:
               source: mount
               deployment:
-                ref: ostree/1/1/0
-                osname:
-                  mpp-format-string: '{osname}'
+                default: true
   - name: raw-metal-image
     stages:
       - type: org.osbuild.copy
