osbuild: backport patch to make qcow2 compression configurable
Upstream PR: https://github.com/osbuild/osbuild/pull/1574

Right now we set compression to `true` (the default) because I'm
still investigating if turning off compression is somehow causing
our artifacts to not boot: https://github.com/coreos/fedora-coreos-tracker/issues/1667#issuecomment-1934628634

--- a/src/coreos.osbuild.x86_64.mpp.yaml
+++ b/src/coreos.osbuild.x86_64.mpp.yaml
@@ -680,4 +680,5 @@ pipelines:
             mpp-format-string: '{filename}'
           format:
             type: qcow2
+            compression: true
             compat: '1.1'
