--- a/src/coreos.osbuild.aarch64.mpp.yaml
+++ b/src/coreos.osbuild.aarch64.mpp.yaml
@@ -674,4 +674,5 @@ pipelines:
             mpp-format-string: '{filename}'
           format:
             type: qcow2
+            compression: true
             compat: '1.1'
