--- a/src/coreos.osbuild.ppc64le.mpp.yaml
+++ b/src/coreos.osbuild.ppc64le.mpp.yaml
@@ -641,4 +641,5 @@ pipelines:
             mpp-format-string: '{filename}'
           format:
             type: qcow2
+            compression: true
             compat: '1.1'
