osbuild: disable internal compression for qemu qcow2
We previously did this in a different way (2a8d1e6) but then
had to revert it (39fdd61) because it caused images to not boot [1].
The root cause appears to have been the virtiofs mount not
being unmounted cleanly from the supermin VM and that is now
fixed so let's switch back to not compressing since we rely on
our outer compression [2].

[1] https://github.com/coreos/coreos-assembler/issues/3728
[2] https://github.com/coreos/fedora-coreos-tracker/issues/1653#issuecomment-1928342241

--- a/src/coreos.osbuild.ppc64le.mpp.yaml
+++ b/src/coreos.osbuild.ppc64le.mpp.yaml
@@ -641,5 +641,5 @@ pipelines:
             mpp-format-string: '{filename}'
           format:
             type: qcow2
-            compression: true
+            compression: false
             compat: '1.1'
