--- a/src/coreos.osbuild.s390x.mpp.yaml
+++ b/src/coreos.osbuild.s390x.mpp.yaml
@@ -640,5 +640,5 @@ pipelines:
             mpp-format-string: '{filename}'
           format:
             type: qcow2
-            compression: true
+            compression: false
             compat: '1.1'
