--- a/src/coreos.osbuild.x86_64.mpp.yaml
+++ b/src/coreos.osbuild.x86_64.mpp.yaml
@@ -680,5 +680,5 @@ pipelines:
             mpp-format-string: '{filename}'
           format:
             type: qcow2
-            compression: true
+            compression: false
             compat: '1.1'
