osbuild: add hyperv platform artifact definition file
Currently there is nothing in platforms.yaml for hyperv so it can be
shared across the two architectures we build it for today.

We don't currently use this but will in the future.

--- a/src/osbuild-manifests/coreos.osbuild.x86_64.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.x86_64.mpp.yaml
@@ -682,3 +682,5 @@ pipelines:
             type: qcow2
             compression: false
             compat: '1.1'
+  - mpp-import-pipelines:
+      path: platform.hyperv.ipp.yaml
