--- a/src/osbuild-manifests/coreos.osbuild.aarch64.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.aarch64.mpp.yaml
@@ -676,3 +676,5 @@ pipelines:
             type: qcow2
             compression: false
             compat: '1.1'
+  - mpp-import-pipelines:
+      path: platform.hyperv.ipp.yaml
