osbuild: add applehv platform artifact definition file
Currently there is nothing in platforms.yaml for applehv so it can be
shared across the two architectures we build it for today.

We don't currently use this but will in the future.

--- a/src/osbuild-manifests/coreos.osbuild.x86_64.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.x86_64.mpp.yaml
@@ -683,4 +683,6 @@ pipelines:
             compression: false
             compat: '1.1'
   - mpp-import-pipelines:
+      path: platform.applehv.ipp.yaml
+  - mpp-import-pipelines:
       path: platform.hyperv.ipp.yaml
