--- a/src/osbuild-manifests/coreos.osbuild.x86_64.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.x86_64.mpp.yaml
@@ -685,4 +685,6 @@ pipelines:
   - mpp-import-pipelines:
       path: platform.applehv.ipp.yaml
   - mpp-import-pipelines:
+      path: platform.gcp.ipp.yaml
+  - mpp-import-pipelines:
       path: platform.hyperv.ipp.yaml
