--- a/src/osbuild-manifests/coreos.osbuild.aarch64.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.aarch64.mpp.yaml
@@ -514,121 +514,11 @@ pipelines:
               source: mount
               deployment:
                 default: true
-  - name: raw-metal-image
-    stages:
-      - type: org.osbuild.copy
-        inputs:
-          tree:
-            type: org.osbuild.tree
-            origin: org.osbuild.pipeline
-            references:
-              - name:raw-image
-        options:
-          paths:
-            - from: input://tree/disk.img
-              to: tree:///disk.img
-      - type: org.osbuild.coreos.platform
-        options:
-          platform: metal
-        devices:
-          disk:
-            type: org.osbuild.loopback
-            options:
-              filename: disk.img
-              partscan: true
-        mounts:
-           - name: root
-             type: org.osbuild.xfs
-             source: disk
-             partition:
-               mpp-format-int: '{image.layout[''root''].partnum}'
-             target: /
-           - name: ostree.deployment
-             type: org.osbuild.ostree.deployment
-             options:
-               source: mount
-               deployment:
-                 default: true
-           - name: boot
-             type: org.osbuild.ext4
-             source: disk
-             partition:
-               mpp-format-int: '{image.layout[''boot''].partnum}'
-             target: /boot
-  - name: raw-metal4k-image
-    stages:
-      - type: org.osbuild.copy
-        inputs:
-          tree:
-            type: org.osbuild.tree
-            origin: org.osbuild.pipeline
-            references:
-              - name:raw-4k-image
-        options:
-          paths:
-            - from: input://tree/disk.img
-              to: tree:///disk.img
-      - type: org.osbuild.coreos.platform
-        options:
-          platform: metal
-        devices:
-          disk:
-            type: org.osbuild.loopback
-            options:
-              filename: disk.img
-              partscan: true
-              sector-size:
-                  mpp-format-int: "{four_k_sector_size}"
-        mounts:
-           - name: root
-             type: org.osbuild.xfs
-             source: disk
-             partition:
-               mpp-format-int: '{image4k.layout[''root''].partnum}'
-             target: /
-           - name: ostree.deployment
-             type: org.osbuild.ostree.deployment
-             options:
-               source: mount
-               deployment:
-                 default: true
-           - name: boot
-             type: org.osbuild.ext4
-             source: disk
-             partition:
-               mpp-format-int: '{image4k.layout[''boot''].partnum}'
-             target: /boot
-  - name: metal
-    stages:
-      - type: org.osbuild.copy
-        inputs:
-          tree:
-            type: org.osbuild.tree
-            origin: org.osbuild.pipeline
-            references:
-              - name:raw-metal-image
-        options:
-          paths:
-            - from: input://tree/disk.img
-              to:
-                mpp-format-string: 'tree:///{filename}'
-  - name: metal4k
-    stages:
-      - type: org.osbuild.copy
-        inputs:
-          tree:
-            type: org.osbuild.tree
-            origin: org.osbuild.pipeline
-            references:
-              - name:raw-metal4k-image
-        options:
-          paths:
-            - from: input://tree/disk.img
-              to:
-                mpp-format-string: 'tree:///{filename}'
   - mpp-import-pipelines:
       path: platform.applehv.ipp.yaml
   - mpp-import-pipelines:
       path: platform.hyperv.ipp.yaml
+  - mpp-import-pipelines:
+      path: platform.metal.ipp.yaml
   - mpp-import-pipelines:
       path: platform.qemu.ipp.yaml
