osbuild: switch applehv,hyperv,gcp manifests to use coreos.platforms stage
We can now use the coreos.platforms stage to set the kernel arguments
and update the GRUB console settings. Let's use that here and also add
the gcp entry to the aarch64 manifest since it now doesn't contain the
x86_64 specific kernel arguments in the stage definition.

--- a/src/osbuild-manifests/coreos.osbuild.aarch64.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.aarch64.mpp.yaml
@@ -517,6 +517,8 @@ pipelines:
   - mpp-import-pipelines:
       path: platform.applehv.ipp.yaml
   - mpp-import-pipelines:
+      path: platform.gcp.ipp.yaml
+  - mpp-import-pipelines:
       path: platform.hyperv.ipp.yaml
   - mpp-import-pipelines:
       path: platform.metal.ipp.yaml
