osbuild: handle extra-kargs from image.yaml
I noticed that we were missing the `mitigations=auto,nosmt` from
the kernel commandline on our FCOS built images that is defined in
image-base.yaml in the FCOS configs. With OSBuild we regressed and
weren't picking up these values.

Adjust how extra kargs are passed from cmd-buildextend-metal into
create_disk.sh and runvm-osbuild so that we can support this use case.

--- a/src/osbuild-manifests/coreos.osbuild.aarch64.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.aarch64.mpp.yaml
@@ -137,6 +137,7 @@ pipelines:
             kernel_opts:
               - rw
               - '$ignition_firstboot'
+              - mpp-format-string: '{extra_kargs}'
           inputs:
             images:
               type: org.osbuild.containers
@@ -159,6 +160,7 @@ pipelines:
               kernel_opts:
                 - rw
                 - '$ignition_firstboot'
+                - mpp-format-string: '{extra_kargs}'
             inputs:
               images:
                 type: org.osbuild.containers
@@ -179,6 +181,7 @@ pipelines:
               kernel_opts:
                 - rw
                 - '$ignition_firstboot'
+                - mpp-format-string: '{extra_kargs}'
             inputs:
               commits:
                 type: org.osbuild.ostree
