osbuild: s390x: nix $ignition_firstboot when deploying from repo:tag
Updates it to match the other deployment paths on s390x. Fixes fdbab67

--- a/src/osbuild-manifests/coreos.osbuild.s390x.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.s390x.mpp.yaml
@@ -138,7 +138,8 @@ pipelines:
                 - /boot
               kernel_opts:
                 - rw
-                - '$ignition_firstboot'
+               ## '$ignition_firstboot' only works with GRUB, not available on s390x
+               #- '$ignition_firstboot'
                 - mpp-format-string: '{extra_kargs}'
             inputs:
               images:
